# cartesiapp

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  vcpkg.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
lib/cartesiapp/: CMakeLists.txt
lib/cartesiapp/include/: cartesiapp.hpp  cartesiapp_request.hpp  cartesiapp_response.hpp  streaming_stt.hpp  streaming_tts.hpp  stt_ws.hpp
lib/cartesiapp/src/: cartesiapp.cpp  cartesiapp_request.cpp  cartesiapp_response.cpp  streaming_stt.cpp  streaming_tts.cpp
lib/cartesiapp/src/impl/: cartesiapp_boost_impl.hpp
sample/: CMakeLists.txt  sample.cpp
samples/: CMakeLists.txt  sample-stt-file.cpp  sample-stt-streaming.cpp  sample-tts-bytes.cpp  sample-tts-streaming.cpp
